objects/RLObject1__c.object
<CustomObject>
    <description>Edit Test Description For RLObject1</description>
    <fields>
        <fullName>RLObject1Field1__c</fullName>
        <label>RLObject1Field1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>RLObject1Field2__c</fullName>
        <label>RLObject1Field2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>RLObject1Field3__c</fullName>
        <label>RLObject1Field3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>RLObject1</label>
    <nameField>
        <label>RLObject1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RLObject1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>